Add some content

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,1 +1,82 @@
-Hello World
+<h1>About</h1>
+
+Hi, I am Felix Geisendörfer, a programmer and entrepreneur living in Berlin, Germany.
+
+I work at [transloadit.com](http://transloadit.com/),
+a small, bootstrapped and profitable SaaS business that I co-founded in 2009.
+
+A lot of my time is spend on open source, and I was an active contributor in
+the early development of [node.js](http://nodejs.org/).
+
+More recently, I helped to start a movement around programming flying
+robots with JavaScript called [NodeCopter](http://nodecopter.com/).
+
+Currently I am building a new product with go.
+
+You can find me on [twitter](https://twitter.com/felixge) and
+[github](https://github.com/felixge).
+
+## Writing
+
+<table class="toc">
+  <tbody>
+    <tr>
+      <td class="title"><a href="#">Back to the Internet</a></td>
+      <td class="date"><span>Nov 18 2012</span></td>
+    </tr>
+  </tbody>
+</table>
+
+I have been blogging since 2006, my older posts can be found [here](http://debuggable.com/posts/archive).
+
+## Speaking
+
+<table class="toc">
+  <tbody>
+    <tr>
+      <td class="title"><a href="#">Dirty - How simple is your database?</a></td>
+      <td class="location"><span>JSConf.eu, Berlin</span></td>
+      <td class="date"><span>Sep 25 2010</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">Node.js - A quick tour</a></td>
+      <td class="location"><span>Hamburg.js Usergroup, Hamburg</span></td>
+      <td class="date"><span>Mar 4 2010</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">Node.js - A quick tour</a></td>
+      <td class="location"><span>Berlin JS Usergroup, Berlin</span></td>
+      <td class="date"><span>Jan 12 2010</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">JavaScript and Git</a></td>
+      <td class="location"><span>CakeFest, Berlin</span></td>
+      <td class="date"><span>Jul 12 2009</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">Receipes for successful CakePHP projects</a></td>
+      <td class="location"><span>CakeFest, Berlin</span></td>
+      <td class="date"><span>Jul 11 2009</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">jQuery and CakePHP</a></td>
+      <td class="location"><span>CakeFest, Buenos Aires</span></td>
+      <td class="date"><span>Dec 3 2008</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">Git and CakePHP</a></td>
+      <td class="location"><span>CakeFest, Buenos Aires</span></td>
+      <td class="date"><span>Dec 2 2008</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">With jQuery & CakePHP to World Domination</a></td>
+      <td class="location"><span>CakeFest, Orlando</span></td>
+      <td class="date"><span>Feb 6 2008</span></td>
+    </tr>
+    <tr>
+      <td class="title"><a href="#">ActiveDOM</a></td>
+      <td class="location"><span>jQuery Camp, Boston</span></td>
+      <td class="date"><span>Oct 27 2007</span></td>
+    </tr>
+  </tbody>
+</table>
