--- a/pages/index.html
+++ b/pages/index.html
@@ -5,16 +5,17 @@ Hi, I am Felix Geisendörfer, a programmer and entrepreneur living in Berlin, Ge
 I work at [transloadit.com](http://transloadit.com/),
 a small, bootstrapped and profitable SaaS business that I co-founded in 2009.
 
-A lot of my time is spend on open source, and I was an active contributor in
+A lot of my time is spend on [open source](/open-source), and I was an active contributor in
 the early development of [node.js](http://nodejs.org/).
 
 More recently, I helped to start a movement around programming flying
 robots with JavaScript called [NodeCopter](http://nodecopter.com/).
 
-Currently I am building a new product with go.
+As of late, [go](http://golang.org/) has become my new language of choice. You
+should check it out, it's amazing.
 
 You can find me on [twitter](https://twitter.com/felixge) and
-[github](https://github.com/felixge).
+[github](https://github.com/felixge), or [contact me](/contact) directly.
 
 ## Writing
 
@@ -39,7 +40,7 @@ I have been blogging since 2006, my older posts can be found [here](http://debug
 				<span>
 					<a href="{{.Url}}">{{.Title}}</a>
 					{{if .VideoUrl}}
-					- <a href="{{.VideoUrl}}">video</a>
+          &middot; <a href="{{.VideoUrl}}">video</a>
 					{{end}}
 				</span>
 			</td>
